bk_ida/gccida/g2/expand_main_function
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_main_function/src/function.c:6908:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_main_function/src/function.c:6917:19: error: use of undeclared identifier 'machine_mode'
v4 = force_reg( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), const_int_rtx[64]); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_main_function/src/function.c:6926:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
last_insn = ( rtx)last_insn[1]; 
                  ^~~~~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_main_function/src/obj/function.o] Error 1
